# greetd-mini-greeter

./: README.md  greeter-gtk3.ui  greeter.css  greeter.ui  meson.build
doc/: greetd-mini-greeter.1.scd
src/: greetd.c  greetd.h  ipc.c  ipc.h  main.c
src/gtk3/: main.c
src/gtk4/: main.c
